--- a/go/idle-startup-tycoon.html
+++ b/go/idle-startup-tycoon.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/thumb-fighter.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/thumb-fighter.png">
+                            <img src="https://sudoku-online.github.io/img/thumb-fighter.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/riddle-school.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/riddle-school.png">
+                            <img src="https://sudoku-online.github.io/img/riddle-school.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-merge.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-merge.png">
+                            <img src="https://sudoku-online.github.io/img/stick-merge.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/soccer-skills-champions-league.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/soccer-skills-champions-league.png">
+                            <img src="https://sudoku-online.github.io/img/soccer-skills-champions-league.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/car-rush.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/car-rush.png">
+                            <img src="https://sudoku-online.github.io/img/car-rush.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/master-chess.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/master-chess.png">
+                            <img src="https://sudoku-online.github.io/img/master-chess.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/monster-tracks.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/monster-tracks.png">
+                            <img src="https://sudoku-online.github.io/img/monster-tracks.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/volley-random.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/volley-random.png">
+                            <img src="https://sudoku-online.github.io/img/volley-random.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rocket-soccer-derby.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rocket-soccer-derby.png">
+                            <img src="https://sudoku-online.github.io/img/rocket-soccer-derby.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tag.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tag.png">
+                            <img src="https://sudoku-online.github.io/img/tag.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-climb-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-climb-2.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-climb-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiger-simulator-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiger-simulator-3d.png">
+                            <img src="https://sudoku-online.github.io/img/tiger-simulator-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
